2006-10-20  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/pango-font.cc (pango_item_string_stencil): only use cmap
	entry if cmap contains glyph.

	* scripts/lilypond-book.py (main): use -deps-box-padding=-3

	* scm/framework-ps.scm (dump-stencil-as-EPS): use eps-box-padding,
	a number.

	* scm/define-grob-properties.scm (all-user-grob-properties):
	remove outdated doc.

	* lily/completion-note-heads-engraver.cc (process_music): always
	clone input events; otherwise we may overwrite input 'duration property.

	* lily/general-scheme.cc (LY_DEFINE): explicit cast in case
	scm_t_int32 != int

	* scm/output-svg.scm (pango-description-regexp-comma): Remove ^
	anchor.

	* VERSION (PATCH_LEVEL): bump version.

2006-10-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/engraver.cc (internal_make_grob): use variables.

	* flower/string-convert.cc (dec2double): clean-up warnings. 

	* configure.in (CXXFLAGS): add -Werror.

	* VERSION (PACKAGE_NAME): release 2.9.25

2006-10-18  Joe Neeman  <joeneeman@gmail.com>

	* lily/simple-spacer.cc (get_line_forces): test for non-fitting
	line even if we precede a forced break.

	* lily/optimal-page-breaking.cc (try_page_spacing): square line
	forces too. Make page-spacing weight default to 10 because the
	changes to vertical springs decreased the page force/line force
	proportions. Also, take the average of line force and page force
	instead of just the sum.

	* lily/constrained-breaking.cc (initialize): make the stiffness
	of the vertical springs depend on the height of the system. This
	prevents pages with only a few large systems from getting huge
	forces

	* Documentation/user/page.itely (Page formatting): document the
	change in default page-spacing-weight

	* lily/include/constrained-breaking.hh: initialise bottom_padding_

2006-10-18  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* input/typography-demo.ly (melody): remove superfluous slur.

	* scm/define-grob-interfaces.scm (piano-pedal-script-interface):